<resources>
    <string name="app_name">EtApp</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="tr_90" translatable="false">+90</string>
    <string name="password">Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_code">Verify code</string>
    <string name="resend">Resend</string>
    <string name="already_have_account">I already have an account.</string>
    <string name="dont_have_account">I don\'t have any account yet.</string>
    <string name="skip">Skip</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_password">invalid password</string>
    <string name="invalid_name">invalid name</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="watch_list">Watch List</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="code_expired">Verification code expired!</string>
    <string name="create_activity">Create Activity</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_link">Send Link</string>
    <string name="verification_link_sent_to_email_address">Lütfen e-mail adresinize gönderilen bağlantıya tıklayarak e-mail adresinizi doğrulayınız.</string>
    <string name="camp">Camp</string>
    <string name="running">Running</string>
    <string name="cinema">Cinema</string>
    <string name="education">Education</string>
    <string name="request_message" translatable="false">\"%s\"</string>
    <string name="activity_attendee_number" translatable="false">[%d/</string>
    <string name="activity_quota" translatable="false">%d]</string>

    <string-array name="languages">
        <item>TR</item>
        <item>EN</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="requests">Requests</string>

</resources>