<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_home"
        app:cnb_iconColor="@color/colorMaterialGreen"    />

    <item android:title="@string/watch_list"
        android:id="@+id/watchListFragment"
        android:icon="@drawable/icon_favorite"
        app:cnb_iconColor="@color/colorMaterialPink" />

    <item android:title="@string/message"
        android:id="@+id/messageFragment"
        android:icon="@drawable/icon_message"
        app:cnb_iconColor="@color/colorMaterialBlue" />

    <item android:title="@string/post"
        android:id="@+id/postFragment"
        android:icon="@drawable/icon_post"
        app:cnb_iconColor="@color/colorMaterialOrange" />
</menu>