<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layout_top_categories"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@color/colorMaterialLightOrange"
            android:contentDescription="Social Categories"
            android:elevation="4dp"
            android:padding="16dp"
            android:src="@drawable/icon_camp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/camp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@color/colorMaterialLightGreen"
            android:contentDescription="Social Categories"
            android:elevation="4dp"
            android:padding="16dp"
            android:src="@drawable/icon_running" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/running"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@color/colorMaterialLightPink"
            android:contentDescription="Social Categories"
            android:elevation="4dp"
            android:padding="16dp"
            android:src="@drawable/icon_cinema" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cinema"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@color/colorMaterialLightBlue"
            android:contentDescription="Social Categories"
            android:elevation="4dp"
            android:padding="16dp"
            android:src="@drawable/icon_education" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/education"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>