<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.gazitf.etapp.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/background_profile_header" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="64dp"
                android:src="@drawable/editprofileimage" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatarIv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:src="@drawable/image_profile"
                app:civ_border_color="@color/colorGrey"
                app:civ_border_width="2dp"
                profileImage="@{viewmodel.user.photoUrl}" />

            <ImageButton
                android:id="@+id/button_edit_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/avatarIv"
                android:background="@drawable/background_transparent"
                android:layout_alignEnd="@id/avatarIv"
                android:src="@drawable/icon_edit"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_cover">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_red"
                android:visibility="@{viewmodel.emailVerified ? View.GONE : View.VISIBLE}">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E-mail adresiniz henüz onaylanmamış." />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/button_send_verification_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:onClick="@{() -> viewmodel.sendEmailVerification()}"
                    android:text="ONAYLA"
                    android:textStyle="bold|italic"
                    android:textColor="@color/colorRed"
                    android:foreground="?attr/selectableItemBackground"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/name"
                app:startIconDrawable="@drawable/icon_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewmodel.editMode}"
                    android:inputType="textPersonName"
                    android:text="@{viewmodel.user.displayName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/e_mail"
                app:startIconDrawable="@drawable/icon_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{viewmodel.editMode}"
                    android:inputType="textEmailAddress"
                    android:text="@{viewmodel.user.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_edit_mode"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewmodel.toggleEditMode()}"
                    android:padding="8dp"
                    android:text="@{viewmodel.editMode ? `İptal` : `Düzenle`}"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:visibility="@{viewmodel.editMode ? View.VISIBLE : View.GONE}"
                    android:padding="8dp"
                    android:text="Kaydet"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_profile_phone_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_number"
                    app:prefixText="@string/tr_90"
                    app:startIconDrawable="@drawable/icon_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{viewmodel.phoneEditMode}"
                        android:inputType="phone"
                        android:text="@{viewmodel.user.phoneNumber.replace(`+90`, ``)}" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_edit_phone_number"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:visibility="@{viewmodel.phoneEditMode ? View.GONE : View.VISIBLE}"
                        android:onClick="@{() -> viewmodel.togglePhoneEditMode()}"
                        android:paddingVertical="8dp"
                        android:text="Değiştir"
                        android:textStyle="bold" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_edit_phone_number_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:visibility="@{viewmodel.phoneEditMode ? View.VISIBLE : View.GONE}"
                        android:paddingVertical="8dp"
                        android:text="Onayla"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_change_password"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/icon_lock"
                    android:drawableTint="@color/colorMaterialGreen"
                    android:padding="8dp"
                    android:text="Şifre Değiştir"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_delete_account"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity=""
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/icon_delete_forever"
                    android:drawableTint="@color/colorRed"
                    android:padding="8dp"
                    android:text="Hesabı sil"
                    android:textColor="@color/colorRed"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>







